--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: Casanova;
-    src: url(CasanovaScotia.otf);
+    src: url(../fonts/CasanovaScotia.otf);
 }
 
 html {
-    background: url(space.png) no-repeat center center fixed;
+    background: url(../images/space.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
