--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html {
 #map {
     margin: auto;
     width: 100%;
-    height: 350px;
+    height: 50vh;
     opacity: 0.9;
     border-radius: 5px;
 }
@@ -31,6 +31,6 @@ html {
     #map {
         margin: auto;
         width: 65%;
-        height: 500px;
+        height: 75vh;
     }
 }
